syntax = "proto3";
package protocol;

option go_package = "github.com/zllovesuki/rmc/spec/protocol";

// Instance describes the a Minecraft server
message Instance {
    string InstanceID = 1;
    string Host = 2;
    string Addr = 3;
    fixed32 Port = 4;
    string Version = 5;

    bool IsJavaEdition = 10;
}

// ControlRequest contains a request to start/stop an instance
message ControlRequest {
    enum ControlAction {
        UNKNOWN = 0;
        START = 1;
        STOP = 2;
    }

    Instance Instance = 1;

    ControlAction Action = 10;
}

// ControlReply contains the outcome of a previous control request
message ControlReply {
    enum ControlResult {
        UNKNOWN = 0;
        SUCCESS = 1;
        FAILURE = 2;
    }
    Instance Instance = 1;

    ControlResult Result = 10;
}

// ProvisionRequest contains a request to create/delete an instance
message ProvisionRequest {
    enum ProvisionAction {
        UNKNOWN = 0;
        CREATE = 1;
        DELETE = 2;
    }
    Instance Instance = 1;

    ProvisionAction Action = 10;
}

// ProvisionReply contains the outcome of a previous provision request
message ProvisionReply {
    enum ProvisionResult {
        UNKNOWN = 0;
        SUCCESS = 1;
        FAILURE = 2;
    }
    Instance Instance = 1;

    ProvisionResult Result = 10;
}